--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,14 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="mb_article">Articles</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="title_article">Article</string>
+    <string name="title_person">Person</string>
+    <string name="title_location">Location</string>
+    <string name="title_message">Message</string>
+    <string name="title_home">Home</string>
 
 </resources>
